@startuml
class Capitan {
    - nombre: String
    - apellido: String
    - matricula: int
    + Capitan(nombre String, apellido String, matricula int): void
}

abstract Embarcacion <<abstract>> {
    - capitan: Capitan
    - precioBase: double
    - valorAdicional: double
    - AñoDeFabricacion: int
    + montoDeAlquiler(): double
}

class Yate {
    - cantCamarotes: int
    + compareTo(o Object): int
}

class Velero {
    - cantMastiles: int
    + esGrande(): boolean
}

interface Comparable <<interface>> {
    + compareTo(o Object): int
}

Embarcacion "1" -up-> "1" Capitan
Velero -up-|> Embarcacion: extends
Yate -up-|> Embarcacion: extends
Yate .up.|> Comparable: implements
@enduml